--- a/frontend/src/components/FoodDisplay/FoodDisplay.css
+++ b/frontend/src/components/FoodDisplay/FoodDisplay.css
@@ -7,10 +7,31 @@
     font-weight: 600;
 }
 
-.food-display-list{
+/*.food-display-list{
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(240px,1fr));
     margin-top: 30px;
     gap: 30px;
     row-gap: 50px;
+}*/
+
+.category-section {
+  margin-top: 40px;
 }
+
+.category-title {
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin-bottom: 20px;
+  text-transform: capitalize;
+  color: #333;
+}
+
+.food-display-list {
+  display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(240px,1fr));
+    margin-top: 30px;
+    gap: 30px;
+    row-gap: 50px;
+}
+
