--- a/frontend/src/components/FoodItem/FoodItem.css
+++ b/frontend/src/components/FoodItem/FoodItem.css
@@ -1,15 +1,20 @@
 .food-item{
+
     width: 100%;
     margin: auto;
     border-radius: 15px;
     box-shadow: 0px 0px 10px #00000015;
     transition: 0.3s;
     animation: fadeIn 1s;
+
 }
+
+
 
 .food-item-image{
     width: 100%;
     border-radius: 15px 15px 0px 0px;
+    height: 160px;
 }
 
 .food-item-info{
@@ -71,3 +76,5 @@
 .food-item-counter img{
     width: 30px;
 }
+
+/* --- Food card container --- */
